--- a/app-frontend/index.html
+++ b/app-frontend/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vipingo Seventh-day Adventist Church</title>
+
+    <!-- ✅ Add this script to set the dark class early -->
+    <script>
+      // Check saved theme in localStorage
+      if (localStorage.getItem('theme') === 'dark') {
+        document.documentElement.classList.add('dark');
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
